# units

./: .gitignore  CMakeLists.txt  README.md  dh_unitsConfig.cmake.in
.github/workflows/: linux-gcc.yml  macos-clang.yml  windows-msvc.yml
benchmark/: bench_baseline.cpp  bench_main.cpp  bench_units.cpp  init_arrays.hpp
include/dh/: units.hpp
include/dh/mpl/: accumulate.hpp  bind.hpp  comparisons.hpp  conditional.hpp  core.hpp  count_if.hpp  filter.hpp  find_if.hpp  front.hpp  functors.hpp  invoke.hpp  is_unique.hpp  join.hpp  list.hpp  min_element.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  transform.hpp  unwrap.hpp  void_t.hpp  wrap.hpp
include/dh/mpl/detail/: accumulate_impl.hpp  find_if_impl.hpp  invoke_impl.hpp  is_unique_impl.hpp  join_impl.hpp  pop_front_impl.hpp
include/dh/units/: declaration_macros.hpp  dimensions.hpp  format_quantity.hpp  format_quantity_libfmt.hpp  imperial_units.hpp  math.hpp  quantity.hpp  quantity_cast.hpp  quantity_conversion.hpp  si_units.hpp  traits.hpp  unit.hpp
samples/: extension.cpp  mpl.cpp
samples/compiler_explorer/: README.md  single_header.hpp
test/: example.cpp  numbered_structs.hpp  test_accumulate_type.cpp  test_accumulate_value.cpp  test_conditional.cpp  test_filter.cpp  test_find_if.cpp  test_is_unique.cpp  test_join.cpp  test_min_element.cpp  test_quantity.cpp  test_quantity_conversion.cpp  test_quantity_format.cpp  test_traits.cpp  test_transform.cpp
